--- a/public/index.html
+++ b/public/index.html
@@ -35,13 +35,13 @@
   <!-- Javascript files-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-  <script src="/portfolioReact/js/jquery.sticky.js"></script>
-  <script src="/portfolioReact/js/jquery.scrollTo.min.js"></script>
+  <script src="/js/jquery.sticky.js"></script>
+  <script src="/js/jquery.scrollTo.min.js"></script>
     <!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCcj7bjt-qTuNmnI_r_Ztca58VHT5x0gJ0"></script>-->
   <!-- to use it on your site, change API key for Google Maps -->
   <!-- <script src="js/gmaps.js"></script> -->
-  <script src="/portfolioReact/js/jquery.cookie.js"></script>
-  <script src="/portfolioReact/js/front.js"></script>
+  <script src="/js/jquery.cookie.js"></script>
+  <script src="/js/front.js"></script>
 </body>
 
 </html>
