--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,10 @@
   <!-- <script src="js/gmaps.js"></script> -->
   <script src="/js/jquery.cookie.js"></script>
   <script src="/js/front.js"></script>
+  <script src="/js/wow.min.js"></script>
+  <script>
+    new WOW().init();
+    </script>
 </body>
 
 </html>
