--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
+xmlns:fb="http://ogp.me/ns/fb#">
 
 <head>
   <meta charset="utf-8">
@@ -8,8 +9,9 @@
   <meta name="description" content="Portolio">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="all,follow">
+  <meta property="og:image" content="%PUBLIC_URL%/logoFire.png" />
+  <link rel="image_src" href="%PUBLIC_URL%/logoFire.png" />
   <link rel="icon" href="%PUBLIC_URL%/ico.png" />
-  <meta property="og:image" content="img/logo.png" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
