add large image

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@ xmlns:fb="http://ogp.me/ns/fb#">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="all,follow">
   <meta property="og:image" content="%PUBLIC_URL%/logoFire.png" />
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:image" content="%PUBLIC_URL%/logoFire.png">
   <link rel="image_src" href="%PUBLIC_URL%/logoFire.png" />
   <link rel="icon" href="%PUBLIC_URL%/ico.png" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon.png" />
