--- a/privacypolicy/arabicenglishdictionary.html
+++ b/privacypolicy/arabicenglishdictionary.html
@@ -8,7 +8,7 @@
     </head>
     <body>
     <strong>Privacy Policy</strong> <p>
-                  Amine ABBAOUI built the Nature wallpaper app as
+                  Amine ABBAOUI built the EN - AR | قاموس انجليزى عربى app as
                   a Free app. This SERVICE is provided by
                   Amine ABBAOUI at no cost and is intended for use as
                   is.
@@ -25,7 +25,7 @@
                 </p> <p>
                   The terms used in this Privacy Policy have the same meanings
                   as in our Terms and Conditions, which are accessible at
-                  Nature wallpaper unless otherwise defined in this Privacy Policy.
+                  EN - AR | قاموس انجليزى عربى unless otherwise defined in this Privacy Policy.
                 </p> <p><strong>Information Collection and Use</strong></p> <p>
                   For a better experience, while using our Service, I
                   may require you to provide us with certain personally
