--- a/privacypolicy/swiftguide.html
+++ b/privacypolicy/swiftguide.html
@@ -4,11 +4,11 @@
       <meta charset='utf-8'>
       <meta name='viewport' content='width=device-width'>
       <title>Privacy Policy</title>
-      <style> body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:1em; } </style>
+      <link rel="stylesheet" type="text/css" href="main-style.css">
     </head>
     <body>
     <strong>Privacy Policy</strong> <p>
-                  Amine ABBAOUI built the Angular Cheat Sheet app as
+                  Amine ABBAOUI built the Swift Guide app as
                   a Free app. This SERVICE is provided by
                   Amine ABBAOUI at no cost and is intended for use as
                   is.
@@ -25,7 +25,7 @@
                 </p> <p>
                   The terms used in this Privacy Policy have the same meanings
                   as in our Terms and Conditions, which are accessible at
-                  Angular Cheat Sheet unless otherwise defined in this Privacy Policy.
+                  Swift Guide unless otherwise defined in this Privacy Policy.
                 </p> <div><strong>Information Collection and Use</strong></div> <p>
                   For a better experience, while using our Service, I
                   may require you to provide us with certain personally
